--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "clerk": "^0.6.1",
+    "@clerk/nextjs": "^6.33.0",
     "mongoose": "^8.18.3",
     "next": "15.5.4",
     "react": "19.1.0",
